* Rotten Cucumber alert on Rails if you upgrade your gem without regenerating with script/generate cucumber. (Aslak Hellesøy)
* Stop the confusion between "homepage" and "home page" by allowing both (Ryan Bigg & Bodaniel Jeanes)
* Make script/cucumber file generated by the Rails cucumber generator looks for cucumber in vendored gems as well. (Tom ten Thij)

=== Bugfixes
* Transforms can return nil. (Thomas Marek)
* Generated rails rake tasks doesn't use the vendored version cucumber binary (#468 Josh Nichols)
* Incorrect diagnostics in case when Before raises in presence of Background (#465 Fedor Kocherga)
* Error on pystring in scenario outline with pretty formatter (#475 Aslak Hellesøy)
* Adding After('@allow-rescue') to set allow_rescue back to its former value. (Alf Mikula)
* Feature files are now sorted before they are executed, because different operating systems may list files differently. (Aslak Hellesøy)
* Fixed image loading for Windows in PDF formatter. Allow use of both png and jpg. (#461 Declan Whelan)
* Before('~@no-txn') is run on all scenarios without @no-txn causing Cucumber::Rails::World.use_transactional_fixtures to always be true. (#457 Aslak Hellesøy)
* JUnit formatter not handling scenario outline tables (#472 Matt Wynne)
* Language help broken (#467 Matt Wynne)
* Language help formatter aligns output better on Ruby 1.8.6 (Aslak Hellesøy)
* Better backtraces for Ruby 1.8.7. (Jakob Skov-Pedersen)
* String step definitions ( Given 'I have $number cucumbers' ) are escaped before being turned into regular expressions. (David Waite) 

== 0.3.104 2009-09-27

This release has some minor changes to the command line and formatters. The biggest change is internally, paving
the way for more programming language support in Cuke4Duke, which now supports step definitions written in Java, Scala,
Groovy, Clojure and Javascript!

=== New Features
* "usage" formatter should display progress (#437 Aslak Hellesøy)
* Added example for Ramaze. (Yutaka HARA)
