@@ -10,6 +10,7 @@
 * Make script/cucumber file generated by the Rails cucumber generator looks for cucumber in vendored gems as well. (Tom ten Thij)
 
 === Bugfixes
+* instance_exec get declared private (#477 Tim Galeckas)
 * Transforms can return nil. (Thomas Marek)
 * Generated rails rake tasks doesn't use the vendored version cucumber binary (#468 Josh Nichols)
 * Incorrect diagnostics in case when Before raises in presence of Background (#465 Fedor Kocherga)
